--- a/visual_graph_datasets/templates/config.yaml.j2
+++ b/visual_graph_datasets/templates/config.yaml.j2
@@ -5,4 +5,4 @@ base:
     provider:  "nextcloud"
 
 nextcloud:
-    url: "https://nextcloud.electronic-heart.com/index.php/s/kF67pxNwgBxJwSB"
+    url: "https://bwsyncandshare.kit.edu/s/E3MynrfQsLAHzJC"
